// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contains the navbar 1`] = `
<DocumentFragment>
  <div
    class="navbar-fixed"
  >
    <nav
      class="black"
    >
      <ul
        class="dropdown-content black"
        id="dropdown1"
      >
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Breakfast"
          >
            Breakfast
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Dessert"
          >
            Dessert
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Miscellaneous"
          >
            Miscellaneous
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Pasta"
          >
            Pasta
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Side"
          >
            Side
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Starter"
          >
            Starter
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Vegetarian"
          >
            Vegetarian
          </a>
        </li>
      </ul>
      <ul
        class="sidenav"
        id="mobile-demo"
      >
        <li>
          <div>
            <h5
              class="custmText center-align grey-text text-darken-4"
            >
              Categories
            </h5>
          </div>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Breakfast"
          >
            Breakfast
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Dessert"
          >
            Dessert
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Miscellaneous"
          >
            Miscellaneous
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Pasta"
          >
            Pasta
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Side"
          >
            Side
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Starter"
          >
            Starter
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Vegetarian"
          >
            Vegetarian
          </a>
        </li>
      </ul>
      <div
        class="container"
      >
        <div
          class="nav-wrapper"
        >
          <a
            class="brand-logo"
            href="/"
          >
            Recipi
          </a>
          <a
            aria-current="page"
            class="sidenav-trigger active"
            data-target="mobile-demo"
            href="/"
          >
            <i
              class="material-icons"
            >
              menu
            </i>
          </a>
          <ul
            class="right hide-on-med-and-down"
          >
            <li>
              <a
                class="dropdown-trigger"
                data-target="dropdown1"
                href="#"
              >
                Categories
                <i
                  class="material-icons right"
                >
                  arrow_drop_down
                </i>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Renders the app enterely 1`] = `
<DocumentFragment>
  <div
    class="navbar-fixed"
  >
    <nav
      class="black"
    >
      <ul
        class="dropdown-content black"
        id="dropdown1"
      >
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Breakfast"
          >
            Breakfast
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Dessert"
          >
            Dessert
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Miscellaneous"
          >
            Miscellaneous
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Pasta"
          >
            Pasta
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Side"
          >
            Side
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Starter"
          >
            Starter
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/"
            title="Vegetarian"
          >
            Vegetarian
          </a>
        </li>
      </ul>
      <ul
        class="sidenav"
        id="mobile-demo"
      >
        <li>
          <div>
            <h5
              class="custmText center-align grey-text text-darken-4"
            >
              Categories
            </h5>
          </div>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Breakfast"
          >
            Breakfast
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Dessert"
          >
            Dessert
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Miscellaneous"
          >
            Miscellaneous
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Pasta"
          >
            Pasta
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Side"
          >
            Side
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Starter"
          >
            Starter
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="sidenav-close grey-text text-darken-4 active"
            href="/"
            title="Vegetarian"
          >
            Vegetarian
          </a>
        </li>
      </ul>
      <div
        class="container"
      >
        <div
          class="nav-wrapper"
        >
          <a
            class="brand-logo"
            href="/"
          >
            Recipi
          </a>
          <a
            aria-current="page"
            class="sidenav-trigger active"
            data-target="mobile-demo"
            href="/"
          >
            <i
              class="material-icons"
            >
              menu
            </i>
          </a>
          <ul
            class="right hide-on-med-and-down"
          >
            <li>
              <a
                class="dropdown-trigger"
                data-target="dropdown1"
                href="#"
              >
                Categories
                <i
                  class="material-icons right"
                >
                  arrow_drop_down
                </i>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>
  <div>
    <div
      class="container"
    >
      Loading...
    </div>
  </div>
</DocumentFragment>
`;
